# quasi-newton-methods

./: .gitignore  README.md
.github/workflows/: docs.yml  test.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  pyodide-utils.ts
docs/.vitepress/theme/components/: OptimizerVisualizer.vue
docs/evidence/: baseline_results.md  methodology.md
docs/public/qnm/: __init__.py  bfgs.py  lbfgs.py  lbfgsb.py  line_search.py  utils.py
docs/references/: articles.md  implementation_comparison.md  implementations.md  papers.md  scipy.md
docs/theory/: bfgs.md  concepts.md  lbfgs.md  lbfgsb.md
provenance/: bfgs.yml  lbfgs.yml  lbfgsb.yml
src/python/: pyproject.toml
src/python/qnm/: __init__.py  bfgs.py  lbfgs.py  lbfgsb.py  line_search.py  problems.py  utils.py
src/python/scripts/: verify_implementation.py
src/python/tests/: test_gradcheck.py  test_lbfgsb.py  test_line_search.py  test_quadratic.py  test_rosenbrock.py
