[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qnm"
version = "0.1.0"
description = "Evidence-first quasi-Newton methods (BFGS/L-BFGS/L-BFGS-B)"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "scipy", "numba"]

